--- a/templates/bt.html
+++ b/templates/bt.html
@@ -42,7 +42,8 @@
 </head>
 <body>
   <h1>Keep-Alive STT Server</h1>
-  <p>Hệ thống tự động ping đến STT server mỗi 2 phút, giữ cho nó luôn hoạt động. Bạn cũng có thể ping thủ công.</p>
+  <p>Ứng dụng này sẽ tự động gửi ping đến server STT mỗi 2 phút để giữ cho nó luôn hoạt động.</p>
+  <p>Nếu muốn kiểm tra thủ công, bạn có thể nhấn nút bên dưới.</p>
 
   <button id="ping-btn">Ping Thủ Công</button>
 
